# www

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  Makefile  SECRET.template  astro.config.mjs  docker-compose.prod.yml  docker-compose.yml  index.php  package-lock.json  package.json
components/: ads_banner.html  footer.html  footer.php  head_policies.html  imports.html  navbar.html  navbar.php  policies_head.php
db/: .dockerignore  00-users.sql  01_schema.sql  02_travel_checklist.sql  10-www_config.sql  Dockerfile
nginx/: nginx.conf  nginx.prod.conf
nginx.prod/: nginx.conf
php/: functions.php
public/php/: files.php  session.php
public/scripts/: book.js  footer-geolocate.js  parallax.js
public/styles/: _common.css  code.css  colors.css  style.css
scripts/: book.js  footer-geolocate.js  parallax.js
server/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  run.py
server/api/: __init__.py  auth.py  redirects.py  travel_checklist.py  users.py
server/api/util/: __init__.py  responses.py
server/db/: __init__.py  _connection.py  auth.py  redirects.py  travel_checklist.py  users.py
server/scripts/: set_password.py
src/components/: Background.astro  Banner.astro  Card.astro  Footer.astro  FooterDonations.astro  ItemCard.astro  Navbar.astro  Section.astro  Separator.astro
src/data/: redirects.ts
src/layouts/: Layout.astro  Page.astro
styles/: _common.css  social.css  style.css
tests/: conftest.py
webui/: .dockerignore  Dockerfile  package-lock.json  package.json
(+219 files in other folders)
